test/functional/should-fail/run/noargs.f3
/*
 * __ARGS__ is to be removed from being a global and meta variable
 * It is currently used in run() until run(_anything_:String[]) is in place.
 * See comments for vsgc-1426
 *
 * @test/fail
 *
 */
import java.lang.System;

System.out.println("arg count: {sizeof __ARGS__}");
System.out.print("ARGS: ");
System.out.println ({__ARGS__});
